--- a/VRChat/13/1323513.html
+++ b/VRChat/13/1323513.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "1Zn9biSZUjq1zWSAEflt+FfuTUEgKSLLK7GFq2+Mrco="></script>
+    "r+FbqiEFG2TvwJubFgWgNUoYLYVu7Dls+sCWH5HhbIY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ニャンエナ（ニャンスターエナジー）[無料アップデート]6/30 テクスチャと500ml缶追加！","description":"2020.6.30　テクスチャと500ml缶追加♪\n\n【ニャンエナ】\n\nパロディ商品です\nVRChat向け・小物アイテム\n\nお得なセット販売もあります。\n\nポリゴン数\n　ニャンエナ：2362\n　ニャンエナ(ローポリ)：409\n　ニャンエナ(ハイポリ)：4066\n\n【内容】\n\n■readme.txt\n\n■ニャンエナ.unitypackage\n　→ニャンエナモデルとそれぞれのテクスチャ、マテリアル\n\n■モデル・テクスチャ改造用フォルダ\n　　□ニャンエナ.fbx\n　　□ニャンエナ(大).fbx New\n　　□ニャンエナ(ローポリ).fbx\n　　□ニャンエナ(ハイポリ).fbx\n　　□ニャンエナ.png\n　　□ニャンエナ_混沌.png\n　　□ニャンエナ_自由.png\n　　□ニャンエナ_打撃.png\n　　□ニャンエナ_超.png\n　　□ニャンエナ_零.png\n　　□ニャンエナ_楽園.png New\n　　□ニャンエナ_大.png New\n　　□ニャンエナ(UV).png\n\n\n【シェイプキーについて】\n\n　「ニャンエナ」には缶の蓋を開ける見た目にするための\n　シェイプキーを設定しております。\n　シェイプキー「開ける」を増やすと缶の口が下に下がり蓋があきます。\n　シェイプキー「プルタブ」を増やすと蓋を開けるときのように、\n　プルタブが縦になります。\n\n\n【使用方法】\nUnityにニャンエナ.unitypackageをimportしてください。\nニャンエナをアバターにセットしご利用ください。\n\n\n【※注意事項】\n\n・このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n・改変等はご自由にどうぞ！\n・製作者を騙ることを禁止します。\n・モデルの再配布を禁止します。\n・良識の範囲でのご使用をお願い致します。\n・予告なく規約変更、配布停止、使用禁止にする事があります。\n\n制作者:土司空〈DOSHIKU〉\nhttps://twitter.com/airgaogao \n\nご不明な点、バグなどございましたらご連絡いただけますと幸いです。\n\n2019.04.19　販売開始\n2019.08.26　テクスチャ追加\n2019.12.14　既存モデルのウエイト修正、ローポリ、ハイポリバージョン追加\n2020.06.30　テクスチャ追加、500lm缶追加\n","url":"https://booth.pm/ja/items/1323513","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/e201f4f8-6bc0-4319-ac66-863763d14127/i/1323513/b5836e2e-6af9-48f6-983f-0d539f1677fc_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="1Zn9biSZUjq1zWSAEflt+FfuTUEgKSLLK7GFq2+Mrco="></script>
+    nonce="r+FbqiEFG2TvwJubFgWgNUoYLYVu7Dls+sCWH5HhbIY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -578,9 +578,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
