--- a/VRChat/21/1323521.html
+++ b/VRChat/21/1323521.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Ufn4FvMzEO/B6YzH52nh9pcx2N4ADc6eXsLcP7bA2AE="></script>
+    "qrPPbdDVNEklIgeAWI1IuvH2b2K7BPnvN0GhmCA2Kwo="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"校舎花伝 PET350ml","description":"【校舎花伝 PET350ml】\n\nパロディ商品です\nVRChat向け・小物アイテム\n\nお得なセット販売もあります。\n\nポリゴン数\n　校舎花伝 PET350ml：9408\n　校舎花伝 PET350ml_ローポリ：2820\n\n【内容】\n\n■readme.txt\n\n■校舎花伝 PET350ml.unitypackage\n　→校舎花伝 PET350mlとそれぞれのテクスチャ、マテリアル\n\n■モデル・テクスチャ改造用フォルダ\n　　□校舎花伝.fbx\n　　□校舎花伝_ローポリ.fbx\n　　□校舎花伝.png\n　　□校舎花伝(UV).png\n　　\n\n\n【使用方法】\nUnityに校舎花伝 PET350ml.unitypackageをimportしてください。\n校舎花伝 PET350mlをアバターにセットしご利用ください。\n蓋やラベル等はそれぞれ別々のオブジェクトとして登録しているので、\n蓋を非表示にし、蓋が開いている表現等も簡単にできます。\n\n\n【※注意事項】\n\n・このファイルを使用して発生したいかなるトラブルにも責任を負いかねます\n・改変等はご自由にどうぞ！\n・製作者を騙ることを禁止します。\n・モデルの再配布を禁止します。\n・良識の範囲でのご使用をお願い致します。\n・予告なく規約変更、配布停止、使用禁止にする事があります。\n\n制作者:土司空〈DOSHIKU〉\nhttps://twitter.com/airgaogao \n\nご不明な点、バグなどございましたらご連絡いただけますと幸いです。\n\n2019.04.19　販売開始\n","url":"https://booth.pm/ja/items/1323521","offers":{"priceCurrency":"JPY","@type":"Offer","price":"200"},"image":"https://booth.pximg.net/c/620x620/e201f4f8-6bc0-4319-ac66-863763d14127/i/1323521/20b0f503-6d39-4945-be8c-be6044ed1963_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ufn4FvMzEO/B6YzH52nh9pcx2N4ADc6eXsLcP7bA2AE="></script>
+    nonce="qrPPbdDVNEklIgeAWI1IuvH2b2K7BPnvN0GhmCA2Kwo="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -451,9 +451,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
