--- a/VRChat/23/1322223.html
+++ b/VRChat/23/1322223.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "j+H1flHiJ9V6+8i9CcYbnrz8APRKzC4rbitPsttDgPU="></script>
+    "0Pc6jsjbMFIMCNyksHXet0NCwHPNOYNspzHeQOa/UpY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"KiraDragon_Acrylic_Keychain","description":"サンプル画像は完成イメージのため、実物と異なる場合があります。\n\nhttps://twitter.com/TodayKiral/status/1116982635761287168","url":"https://booth.pm/ja/items/1322223","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1240"},"image":"https://booth.pximg.net/c/620x620/a950ffbb-8199-4a22-91e3-9accc64436af/i/1322223/5d07fc26-4081-4da6-a7c2-7562681f0ecd_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="j+H1flHiJ9V6+8i9CcYbnrz8APRKzC4rbitPsttDgPU="></script>
+    nonce="0Pc6jsjbMFIMCNyksHXet0NCwHPNOYNspzHeQOa/UpY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -393,9 +393,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
