--- a/VRChat/60/1321460.html
+++ b/VRChat/60/1321460.html
@@ -82,7 +82,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "nER1m13v/4KJP/nmknK81r+TviAGBfkVlnPRUiXOyFw="></script>
+    "QpdrvdnKbnJGQryANKKyh6KB3H0ofKfdYV961dyfXt4="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Rimuru | リムル - VRChat [Tensei Shitara Slime]  3Dモデル - v1.2","description":"Rimuru Tempest (slime ver) from Tensei Shitara Slime\n\nThis package only contains Rimuru Tempest. \nShion and Orc Geld can be bought here : \n\n-VRChat avatar\n-Includes 5 facial gestures\n-Dynamic bone jiggle","url":"https://booth.pm/ja/items/1321460","offers":{"priceCurrency":"JPY","@type":"Offer","price":"1299"},"image":"https://booth.pximg.net/c/620x620/b08ef39d-9a86-42e9-9532-d52b3275adae/i/1321460/be138321-1cf4-4d8f-a209-1a6dea0bfab8_base_resized.jpg"}
     </script>
@@ -96,7 +96,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="nER1m13v/4KJP/nmknK81r+TviAGBfkVlnPRUiXOyFw="></script>
+    nonce="QpdrvdnKbnJGQryANKKyh6KB3H0ofKfdYV961dyfXt4="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -175,7 +175,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      379
+                                      380
                                     </div>
                                   </div></a><a class=
                                   "remove-from-wish-list no-underline !text-current"
@@ -191,7 +191,7 @@
                                   "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                                     <div class=
                                     "typography-14 preserve-half-leading wishlists_count">
-                                      379
+                                      380
                                     </div>
                                   </div></a>
                                 </div>
@@ -536,9 +536,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
