--- a/VRChat/28/1195328.html
+++ b/VRChat/28/1195328.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "mYO+m5bieUKnpyb8BsCYgmC3knsFAIw/KlFKJ387RdM="></script>
+    "AYKtNl5KSzkx7L6bIfKGXpCcaWVlUnkHSgHEWFz50kY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"オリジナル3Dモデル【蘭奈-Rana-】","description":"【概要】\nVRChatを想定して作成された\nHumanoid形式のオリジナル3Dモデルです。\n・オリジナル3Dモデル【蘭奈-Rana-】制作者:neonio(おにべい）\n・Eye tracking:対応\n・Lip Sync:15種\n・BlendShape:39種\n・アニメーション9種","url":"https://booth.pm/ja/items/1195328","offers":{"priceCurrency":"JPY","@type":"Offer","price":"4000"},"image":"https://booth.pximg.net/c/620x620/c4cbb2ea-162a-4b4f-8ba3-cd0b14f08e3e/i/1195328/d77d3ae4-0161-4b28-8568-3e65b3ed47a4_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="mYO+m5bieUKnpyb8BsCYgmC3knsFAIw/KlFKJ387RdM="></script>
+    nonce="AYKtNl5KSzkx7L6bIfKGXpCcaWVlUnkHSgHEWFz50kY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -535,9 +535,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
