--- a/VRChat/04/1321704.html
+++ b/VRChat/04/1321704.html
@@ -79,7 +79,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "LFsYQjha0ikQTxHcUpHc0gGDuHbY0nnSTorp+DcifSg="></script>
+    "c/bIDeg0QcAZd8FQV2qTTj2nBTBtHnTjvkPKoEy2als="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"紐のリボン","description":"VRChat向け紐で結んだリボンの3Dモデルです。\nご自由にお使いください。\n\nポリゴン数:1604\n\n\n禁止事項\n\n・二次配布、販売（改造・未改造問わず）\n・公序良俗に反する行為\n・政治的、宗教的活動\n・自作発言\n\n\n当モデルの利用は全て自己責任でお願いします。\nコンテンツあるいは発生した不利益に対して著作者はなんら責任を負いません。","url":"https://booth.pm/ja/items/1321704","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/b0893d4d-3622-4477-b0fb-2922c00e4232/i/1321704/023b9c04-6937-4735-a307-d29a1c628d19_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="LFsYQjha0ikQTxHcUpHc0gGDuHbY0nnSTorp+DcifSg="></script>
+    nonce="c/bIDeg0QcAZd8FQV2qTTj2nBTBtHnTjvkPKoEy2als="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -388,9 +388,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
