--- a/VRChat/42/1321242.html
+++ b/VRChat/42/1321242.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "/MlPQ29XuL7I6Fxwf4s1Xo+OLdYJ8UQQJFtKndHxc/Y="></script>
+    "Tg+pmGtR+J5RmS8tycxJaAw4APu1F/ITpnTxEyqA6kM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[0yenアリ]小中学生向け名札[2種]","description":"この度は当ページをご覧いただきありがとうございます。さぎりです。また前回と同じ書き始め方になりました。しかしそこは関係ありません！今回のお品はこれ。さぎりの名札…ではなくその元のモデルですね。\n\n最近すごいVR小学生増えてませんかね？さぎりの身の回りでは小学性がたくさんいます。いいですね、わちゃこら動いて大変に愛くるしいです。そこでさぎりは思いつきました。名札付けたらもっと\u003cs\u003e業が深くなる\u003c/s\u003eそれっぽくなるのではと。はい作るしかないですね作りました。紙がビニールケースに入ってるタイプとプラスチックに名前が印刷とか刻印とかされてるタイプです。前者は小学校で、後者は中学校でお世話になったおかたが多いのではないでしょうか。さぎりの学校では小学校で後者のスタイル。中学校では名札が無くなりました。ちゅらいです。\n\n前回の説明文で長い！短くして！ばか！って言われたのでこの辺にしておきます。はい。\n\nそれでは良いVR小学生ライフを！SandRiverはあなたの小学生ライフを応援しています。\n\n-ここから商品内容説明-\n今回の中身は…\n・unityパッケージ1つと\n・テクスチャ2種\n・文字いれサンプルテクスチャ2種\n・文字や色変更用のpsd2種\n・名札のFBXを2種\n・Readme1つ\n・LICENSE(MITライセンス)\nに加え、unityパッケージ内には\n前回同様にうにショップ様のクリスタルシェーダー(https://booth.pm/ja/items/1148311)とみにすけーぷ様(https://miniscape.booth.pm/)のMMSを使用させていただいますのでそちらも同梱させていただきました。今回も引き続き感謝感謝！\n\nところでウェイトとか乗せれたら…いい感じに揺らせると思うんですよね。学ぼうかなぁ…。\n\nさぎり","url":"https://booth.pm/ja/items/1321242","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"160"},"image":"https://booth.pximg.net/c/620x620/cc7a5528-cef2-45ce-ba77-7bb2b5cb5eb6/i/1321242/4b6540fe-9348-4e37-bda5-29ca702db367_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="/MlPQ29XuL7I6Fxwf4s1Xo+OLdYJ8UQQJFtKndHxc/Y="></script>
+    nonce="Tg+pmGtR+J5RmS8tycxJaAw4APu1F/ITpnTxEyqA6kM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -448,9 +448,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
