--- a/VRChat/31/1320631.html
+++ b/VRChat/31/1320631.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "Ntr2IRL3UeGxHqqFiEqaL3yqCSFaPU6v6evj8ubmjEg="></script>
+    "RWpy+4JCvpiiBAyhjCaoiWv+/A1KRlyLSA5B3utH3uM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"缶バッチ風モデルver1.0","description":"簡易的な缶バッチ風３Dモデルです。\n\n内容物は以下のものをzipファイルにまとめております。\n\n・Unityパッケージ\n・FBXファイル\n・Blenderファイル\n・UVテクスチャ\n・サンプル用＿表面水色テクスチャ\n・Readme\n\n\nポリゴン数\n　頂点　　264\n　辺　　　529\n　面　　　268\n　三角面　496\n\n※イメージ画像のLunauffちゃん及びテクスチャ等は付属しておりません。\n\n◆◇◆利用規約◆◇◆\n---------------------------------------------------------\n\n※本モデルデータをご利用された場合には、利用規約にご同意いただいたものとみなされます。\n\n---------------------------------------------------------\n\n■免責事項\n\n・改変の有無に関わらず本データの著作権は制作者であるkuroharuに帰属します。\n・本モデルを使用することで使用者側に不利な問題、如何なる障害や損失があっても配布元は一切責任を負いません。\n・本データは予告なくアップデート、販売の停止をする場合があります。\n・本規約は予告なく変更される場合があります。\n\n\n■禁止事項\n\n・違法行為並びにそれを助長するような行為を禁止します。\n・本モデルデータ、または本モデルを元にしたモデルの許可なき再頒布はできません。\n\n\n■商業利用\n\n・商用利用を行う場合クレジットの記載が必須となります。\n\n\n\n---------------------------------------------------------\n\n\n不明な点がありましたらお気軽にご質問ください。\n\nTwitter:@kuros345\n\n\n\n","url":"https://booth.pm/ja/items/1320631","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ab197c7a-24e4-4a20-ba83-4d171781d120/i/1320631/612cbbb2-81e6-4f3c-b814-c82b963fb019_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="Ntr2IRL3UeGxHqqFiEqaL3yqCSFaPU6v6evj8ubmjEg="></script>
+    nonce="RWpy+4JCvpiiBAyhjCaoiWv+/A1KRlyLSA5B3utH3uM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -385,9 +385,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
